--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,5 +1,9 @@
 
 <div class="container">
+	<div class="header">
+		<a href="/" class="logo left">Carpool</a>
+	</div>
+	<hr class="space">
   <a href="#" id="add_request" class="fancy add">Попутчиков мне!</a>
   <a href="#" id="cancel_request" class="fancy cancel hide">Я передумал!</a>
   <div class="form hide">
