--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>
 		<title></title>
 		<%= stylesheet_link_tag 'less', 'typography', 'dateinput', 'main' %>
-    <%= javascript_include_tag 'jquery.min.js', 'jquery.tools.min.js' %>
+    <%= javascript_include_tag 'jquery.min.js', 'jquery.tools.min.js', 'application' %>
 	</head>
 	<body>
 		<%= yield %>
