group by date in view new styles some js fixes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title></title>
+		<!--[if lt IE 9]>
+    	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="initial-scale=1.0, width=device-width, maximum-scale=1.0"/>
 		<%= stylesheet_link_tag 'less', 'typography', 'dateinput', 'main' %>
     <%= javascript_include_tag 'jquery.min.js', 'jquery.tools.min.js', 'application' %>
 	</head>
