--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -1,25 +1,23 @@
-<% form_for @request, :action => 'create' do |f| -%>
-      <label for="request_from">Откуда</label>
-      <select name="request[from]" id="request_from">
-        <option value="diby">DiBy</option>
-        <option value="minsk">Минск</option>
-      </select>
-      <label for="request_to">Куда</label>
-      <select name="request[to]" id="request_to">
-        <option value="minsk">Минск</option>
-        <option value="diby">DiBy</option>
-      </select><br/>
+<% form_for @request, :action => 'create', :id => 'user' do |f| -%>
+  <label for="request_from">Откуда</label>
+  <select name="request[from]" id="request_from">
+    <option value="diby">DiBy</option>
+    <option value="minsk">Минск</option>
+  </select>
+  <label for="request_to">Куда</label>
+  <select name="request[to]" id="request_to">
+    <option value="minsk">Минск</option>
+    <option value="diby">DiBy</option>
+  </select><br/>
 
-
-      <label for="request_name" class="line">Имя</label>
-                 <input type="text" name="request[name]" value="" id="request_name"/><br/>
-                 <label for="request_phone_number"  class="line">Телефон</label>
-                 <input type="text" name="request[phone_number]" value="" id="request_phone_number" /><br/>
-                 <label for="request_date"  class="line">Дата</label>
-      <input type="date" name="request[date]" id="request_date"/>
-
-
-
+  <label for="request_name" class="line">Имя</label>
+   <input type="text" name="request[name]" value="" id="request_name"/><br/>
+   <label for="request_phone_number"  class="line">Телефон</label>
+   <input type="text" name="request[phone_number]" value="" id="request_phone_number" /><br/>
+   <label for="request_date"  class="line">Дата</label>
+  <input type="date" name="request[date]" id="request_date"/>
+  <br/>
+  <label for="request_hours" class="line">Время</label>
   <select name="request[hours]" id="request_hours">
     <option value="01">01</option>
     <option value="02">02</option>
@@ -60,8 +58,7 @@
     <label for="request_places_number" class="line">Количество мест</label>
                 <input type="text" name="request[places_number]" value="" id="request_number"/><br/><br/>
     <label for="request_description">Описание</label><br/>
-    <textarea name="request[description]" id="request_description" rows="4" cols="40"></textarea>
+    <textarea name="request[description]" id="request_description" rows="4" cols="29"></textarea>
 
   <p><input type="submit" value="Эх подвезу!"></p>
-</form>
 <% end %>
