fix cancel link style

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,7 +14,7 @@ tr.disabled { color: #ccc; }
 
 a.fancy { font-size: large; font-weight: bold; }
 a.add { color: #58BD76; }
-a.cancel { color: #f5a589; }
+a.cancel { color: #d60473; }
 
 textarea {width:390px;height:auto;padding:5px;}
 
