--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -1,1 +1,3 @@
-<%= render :partial => "form", :locals => {:requst => request}  %>
+<div class="form">
+  <%= render :partial => "form", :locals => {:req => @request}  %>
+</div>
