--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,13 +1,12 @@
 <div>
-	<p><strong>Когда:</strong> <%= request.time.to_s(:db) %></p>
-	<p><%= request.from + ' → ' + request.to %></p>
-	<p>
-	  <span class="empty_count"><%= request.places_number.to_i - request.busy.to_i  %></span>
-	  из
-	  <span class="places_number"><%= request.places_number %></span> 
-	  <a class="get_place" href="/requests/<%= request.id %>/accept">занять</a>
-	</p>
-	<p><%= request.user.name %></p>
-	<p><%= request.user.phone_number %></p>
-	<p><a href="/requests/<%= request.id %>">подробнее</a></p>
+  <p><strong>Когда:</strong> <%= @request.time.to_s('%d %b %H:%M') %></p>
+  <p><strong>Откуда → Куда:</strong> <%= @request.from + ' → ' + @request.to %></p>
+  <p><strong>Свободные места:</strong> <span class="empty_count"><%= @request.places_number.to_i - @request.busy.to_i  %></span>
+    из
+    <span class="places_number"><%= @request.places_number %></span> 
+    <a class="get_place" href="/requests/<%= @request.id %>/accept">занять</a>
+  </p>
+  <p><strong>Имя:</strong> <%= @request.user.name %></p>
+  <p><strong>Телефон:</strong> <%= @request.user.phone_number %></p>
+  <p><strong>Комментарий:</strong> <%= @request.comment %></p>
 </div>
