--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 	  <div class="container">
     	<div class="header">
     		<a href="/" class="logo left">Carpool</a>
+    		<span class="beta">&beta;</span>
     	</div>
     	<hr class="space">
 		  <%= yield %>
